re-org & add logger

--- a/package.json
+++ b/package.json
@@ -78,16 +78,16 @@
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
+    "date-fns": "^3.6.0",
     "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.39",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.3.3",
-    "typescript": "^5.4.5"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8"
+    "typescript": "^5.4.5",
+    "vscode-cache": "^0.3.0"
   }
 }
