add back debounce, better z-index logic

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
     "date-fns": "^3.6.0",
+    "dedent": "^1.5.3",
     "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
     "lodash": "^4.17.21",
