--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "vscode-better-stacking-contexts",
-  "displayName": "CSS Better Stacking Contexts",
+  "name": "vscode-better-css-stacking-contexts",
+  "displayName": "Better CSS Stacking Contexts",
   "description": "Highlights CSS stacking contexts and ineffective z-index declarations in VS Code.",
   "author": "Mike Rheault",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mrheault/vscode-better-stacking-contexts"
+    "url": "https://github.com/mrheault/vscode-better-css-stacking-contexts"
   },
   "keywords": [
     "css",
@@ -14,7 +14,7 @@
     "stacking context",
     "z-index"
   ],
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.91.0"
   },
@@ -45,7 +45,6 @@
       ]
     },
     "configuration": {
-
       "title": "Better Stacking Contexts",
       "properties": {
         "betterStackingContexts.decorationColor": {
@@ -61,7 +60,10 @@
         "betterStackingContexts.stackingContextMethod": {
           "type": "string",
           "default": "position",
-          "enum": ["position", "isolation"],
+          "enum": [
+            "position",
+            "isolation"
+          ],
           "enumDescriptions": [
             "Use `position: relative;` to create a stacking context.",
             "Use `isolation: isolate;` to create a stacking context."
@@ -104,7 +106,7 @@
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0",
+    "@vscode/test-electron": "^2.4.1",
     "date-fns": "^3.6.0",
     "dedent": "^1.5.3",
     "esbuild": "^0.21.5",
