split decorations and diagnostics. config settings actually update

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
         },
         "betterStackingContexts.backgroundColor": {
           "type": "string",
-          "default": "editorInfo.hoverHighlightBackground",
+          "default": "editor.hoverHighlightBackground",
           "description": "Background color used to highlight stacking contexts."
         },
         "betterStackingContexts.messageText": {
